--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
   <link rel="stylesheet" href="ToDo.css">
   <title>Todo App</title>
+  <style>
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .grid-container {
+      margin: 0 auto;
+    }
+  </style>
 </head>
 <body>
   <h1 id="main-heading">Todo App</h1>
